[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/placeholderTextures/white.png" type="Texture" id=1]
[ext_resource path="res://scenes/tetris/minitetrimino.gd" type="Script" id=2]
[ext_resource path="res://scenes/tetris/minitetriminoArea2d.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 4 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.591054, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 4 )

[node name="minitetrimino" type="CollisionShape2D"]
shape = SubResource( 1 )
script = ExtResource( 2 )

[node name="line2D" type="Line2D" parent="."]
modulate = Color( 0.996078, 0.85098, 0.717647, 1 )
position = Vector2( 0, 2 )
z_index = -10
points = PoolVector2Array( -12, -12, 0, -15, 0, 0 )
width = 8.0
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 2 )
joint_mode = 2
begin_cap_mode = 2

[node name="canvasLayer" type="CanvasLayer" parent="."]

[node name="sprBgWhite" type="Sprite" parent="."]
scale = Vector2( 10, 10 )
z_index = -8
texture = ExtResource( 1 )

[node name="sprBg" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 8, 8 )
texture = ExtResource( 1 )

[node name="spr" type="Sprite" parent="."]
scale = Vector2( 6, 6 )
texture = ExtResource( 1 )

[node name="sprShading" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.33 )

[node name="sprShading" type="Sprite" parent="sprShading"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, 3 )
scale = Vector2( 7, 1 )
texture = ExtResource( 1 )

[node name="sprShading2" type="Sprite" parent="sprShading"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -3, 0 )
rotation = -1.57079
scale = Vector2( 7, 1 )
texture = ExtResource( 1 )

[node name="sprShading3" type="Sprite" parent="sprShading"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 3, 0 )
rotation = 1.57311
scale = Vector2( 7, 1 )
texture = ExtResource( 1 )

[node name="sprShading4" type="Sprite" parent="sprShading"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -1.86265e-09, -3 )
rotation = 0.00231719
scale = Vector2( 7, 1 )
texture = ExtResource( 1 )

[node name="area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
script = ExtResource( 3 )

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
shape = SubResource( 3 )
